[package]
name = "image-decrypt"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/zy97/image-decrypt"

[dependencies]
reqwest = "0.12"
deno_core = "0.354.0"
serde_v8 = "0.263.0"
base64 = "0.22.1"
axum = { version = "0.8.6" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bb8-redis = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
